[project]
name = "reia"
version = "0.1.0"
description = "REIA using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.6.0"
]

[project.scripts]
reia = "reia.main:run"
run_crew = "reia.main:run"
train = "reia.main:train"
replay = "reia.main:replay"
test = "reia.main:test"
run_with_trigger = "reia.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
